# csv-table-rotation-benchmark

./: .editorconfig  .gitignore  README.md
.github/workflows/: bench.yml  ci.yml  python-compatibility.yml
benchmarks/: quick_test.sh  run_hyperfine.sh
go/: .gitignore  go.mod
go/cmd/rotate/: main.go  main_test.go
go/internal/rotate/: rotate.go  rotate_test.go  rotation_bench_test.go
input-samples/: large.csv  medium.csv  sample-1k.csv  small.csv  startup.csv
python/: .gitignore  pyproject.toml
python/rotate_cli/: __init__.py  __main__.py  rotation.py
python/tests/: test_cli.py  test_rotation.py
rust/: Cargo.toml
rust/benches/: rotation_bench.rs
rust/src/: lib.rs  main.rs
typescript/: .eslintrc.cjs  .eslintrc.json  .prettierrc.json  jest.config.cjs  package-lock.json  package.json  run-bun-papaparse.sh  run-papaparse.sh  tsconfig.eslint.json
typescript/src/: cli.ts  csv-stream.d.ts  index.ts  rotation.ts
typescript/tests/: cli.test.ts  rotation.test.ts
