[package]
name = "rotate_cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "CLI tool to rotate square tables in CSV files"

[[bin]]
name = "rotate_cli"
path = "src/main.rs"

[dependencies]
csv = "1.3"
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
assert_cmd = "2.0"
proptest = "1.4"
insta = { version = "1.34", features = ["glob"] }
criterion = "0.5"

[[bench]]
name = "rotation_bench"
harness = false
